--- a/frontend/src/user/components/UserItem.css
+++ b/frontend/src/user/components/UserItem.css
@@ -14,3 +14,24 @@
     color: white;
     background: #292929;
 }
+
+.user-item a:hover, .user-item a:active {
+    background: #ffd900;
+}
+
+.user-item__image{
+    width: 4rem;
+    height: 4rem;
+    margin-right: 1rem;
+}
+
+.user-item__info h2{
+    font-size: 1.5rem;
+    margin: 0 0 0.5rem 0;
+    font-weight: normal;
+    color: rgb(118, 28, 209);
+}
+
+.user-item:hover h2, .user-item:active h2, .user-item:hover h3, .user-item:active h3 {
+    color: #292929;
+}
