--- a/frontend/src/user/components/UserItem.css
+++ b/frontend/src/user/components/UserItem.css
@@ -26,6 +26,14 @@
 }
 
 .user-item__info h2{
+    padding: 1rem;
+    font-size: 1.5rem;
+    margin: 0 0 0.5rem 0;
+    font-weight: normal;
+    color: rgb(118, 28, 209);
+}
+.user-item__info h3{
+    padding: 1rem;
     font-size: 1.5rem;
     margin: 0 0 0.5rem 0;
     font-weight: normal;
@@ -34,4 +42,8 @@
 
 .user-item:hover h2, .user-item:active h2, .user-item:hover h3, .user-item:active h3 {
     color: #292929;
+}
+
+.user-item__info h3{
+    margin: 0;
 }
