--- a/frontend/src/user/components/UserItem.css
+++ b/frontend/src/user/components/UserItem.css
@@ -19,6 +19,10 @@
     background: #ffd900;
 }
 
+.user-item__content{
+    padding: 0;
+}
+
 .user-item__image{
     width: 2rem;
     height: 2rem;
@@ -32,13 +36,7 @@
     font-weight: normal;
     color: rgb(118, 28, 209);
 }
-.user-item__info h3{
-    padding: 1rem;
-    font-size: 1.5rem;
-    margin: 0 0 0.5rem 0;
-    font-weight: normal;
-    color: rgb(118, 28, 209);
-}
+
 
 .user-item:hover h2, .user-item:active h2, .user-item:hover h3, .user-item:active h3 {
     color: #292929;
